samples/_failures_safe/1761435798_053c5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d56fef3.c: In function ‘main’:
./samples/SAFE/__tmp_2d56fef3.c:148:5: error: expected declaration or statement at end of input
  148 |     input_len = strlen(input_buffer);
      |     ^~~~~~~~~
